# AssessWire-SHL

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
data/catalog/: catalog_clean.json  taxonomy.yaml
docs/: APPROACH.md  DECISION_LOG.md  RISK_CHECKLIST.md
prompts/: generator_comparing.md  generator_retrieving.md  router.md
scripts/: build_catalog.py  replay_traces.py  scrape_catalog.py  test_states.py  verify_live.py
src/assesswise_shl/: __init__.py  config.py  schemas.py
src/assesswise_shl/api/: main.py
src/assesswise_shl/generation/: responder.py
src/assesswise_shl/retrieval/: catalog.py  hybrid.py
src/assesswise_shl/routing/: router.py
src/assesswise_shl/services/: chat_service.py
tests/: test_api.py  test_models.py  test_retrieval.py  test_router.py
