[project]
name = "assesswise-shl-conversational-recommender"
version = "0.1.0"
description = "Conversational SHL assessment recommender with explicit routing, hybrid retrieval, and evaluation harness."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

